--- a/Simple.Extensions.String/Simple.Extensions.String.csproj
+++ b/Simple.Extensions.String/Simple.Extensions.String.csproj
@@ -2,6 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>BLCKMN</Authors>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/blckmn/Simple.Extensions/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/blckmn/Simple.Extensions</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/blckmn/Simple.Extensions</RepositoryUrl>
+
+    <Description>Simple Extension Library for some basic and handy string extensions.</Description>
+    <Copyright>Copyright © BLCKMN 2018</Copyright>
+    <Summary>A suite of simple string extensions.</Summary>
+    <NeutralLanguage>en-US</NeutralLanguage>
+    <Title>Simple.Extensions.String</Title>
+    <PackageId>Simple.Extensions.String</PackageId>
+    <PackageTags>String Extension</PackageTags>
+    
   </PropertyGroup>
 
 </Project>
