--- a/Simple.Extensions.String/Simple.Extensions.String.csproj
+++ b/Simple.Extensions.String/Simple.Extensions.String.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>BLCKMN</Authors>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/blckmn/Simple.Extensions/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/blckmn/Simple.Extensions</PackageProjectUrl>
     <RepositoryUrl>https://github.com/blckmn/Simple.Extensions</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
 
     <Description>Simple Extension Library for some basic and handy string extensions.</Description>
     <Copyright>Copyright © BLCKMN 2018</Copyright>
@@ -16,7 +16,6 @@
     <Title>Simple.Extensions.String</Title>
     <PackageId>Simple.Extensions.String</PackageId>
     <PackageTags>String Extension</PackageTags>
-    
   </PropertyGroup>
 
 </Project>
