--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: csharp  
-dist: trusty  
-dotnet: 2.1
+dist: bionic  
+dotnet: 2.2
 mono: none
 
 branches:
@@ -9,11 +9,11 @@ branches:
   - release
 
 script:  
-  - bash "${TRAVIS_BUILD_DIR}/build/build.sh"
+  - ${TRAVIS_BUILD_DIR}/build/build.sh
 
 deploy:
   provider: script
-  script: bash "${TRAVIS_BUILD_DIR}/build/build.sh" deploy
+  script: ${TRAVIS_BUILD_DIR}/build/build.sh deploy
   skip_cleanup: true
   on:
     branch: release
