--- a/Simple.Extensions.Web/Simple.Extensions.Web.csproj
+++ b/Simple.Extensions.Web/Simple.Extensions.Web.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="microsoft.aspnetcore.diagnostics" Version="2.2.0" />
     <PackageReference Include="microsoft.aspnetcore.http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
