--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
 name: CI - Build only
 
 on: 
-  push:
+  pull_request:
     branches:
-    - master
+      - main
 
 jobs:
   build:
@@ -16,6 +16,5 @@ jobs:
       with:
         dotnet-version: '3.1.x'
 
-    - if: github.ref == 'refs/heads/master' 
-      name: Run the build script
+    - name: Build
       run: ./build/build.sh
